Added insert before and max occurs to the standard Arbil templates to generalize the control of added nodes between imdi and cmdi.

--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Location.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Location.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="ContentType">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Location>
         <Continent Link="http://www.mpi.nl/IMDI/Schema/Continents.xml" Type="OpenVocabulary"/>
         <Country Link="http://www.mpi.nl/IMDI/Schema/Countries.xml" Type="ClosedVocabulary"/>
