--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource(x).Keys.Key.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource(x).Keys.Key.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="LexiconResource,LexiconComponent,Source,Anonyms">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" >
         <Key Name="Standard Template Key"></Key>
 </InsertableSection>
