--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.ContentType.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.ContentType.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Format">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <ContentType/>
 </InsertableSection>
