--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Description.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Description.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="DocumentLanguages">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
 </InsertableSection>
