--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.DocumentLanguages.Language.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.DocumentLanguages.Language.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Language>
         <Id/>
         <Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" Type="OpenVocabulary"/>
