--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Project.Author.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Project.Author.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Size">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Author/>
 </InsertableSection>
