--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Publisher.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.Publisher.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Author">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Publisher/>
 </InsertableSection>
