--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.MDGroup.Content.Keys.Key.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.MDGroup.Content.Keys.Key.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Key Name="Standard Template Key"></Key>
 </InsertableSection>
