--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.References.Description.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.References.Description.xml
@@ -1,4 +1,4 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Description LanguageId="" Link=""/>
 </InsertableSection>
