--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.Anonyms.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.Anonyms.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="WrittenResource,LexiconResource,LexiconComponent,Source">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Anonyms >
         <ResourceLink></ResourceLink>
         <Access>
