--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.MediaFile.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.MediaFile.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="WrittenResource,LexiconResource,LexiconComponent,Source,Anonyms">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <MediaFile>
         <ResourceLink/>
         <Type Link="http://www.mpi.nl/IMDI/Schema/MediaFile-Type.xml" Type="ClosedVocabulary" ></Type>
