--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Anonyms">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <Source>
         <Id/>
         <Format Link="http://www.mpi.nl/IMDI/Schema/Source-Format.xml" Type="OpenVocabulary"></Format>
