--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource.xml
@@ -1,5 +1,5 @@
 
-<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="LexiconResource,LexiconComponent,Source,Anonyms">
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
     <WrittenResource>
         <ResourceLink/>
         <MediaResourceLink/>
