Added genre and subgenre as potential name fields so that the content node can find a name.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -776,6 +776,8 @@
         <TreeNodeNameField FieldsShortName="Region" />
         <TreeNodeNameField FieldsShortName="Country" />
         <TreeNodeNameField FieldsShortName="Continent" />
+        <TreeNodeNameField FieldsShortName="Genre" />
+        <TreeNodeNameField FieldsShortName="SubGenre" />
     </PreferredTreeNodeNameFields>
 
 </template>
