Markup and style of Arbil tables

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.html
@@ -1,5 +1,10 @@
 <wicket:panel>
-    <table wicket:id="datatable">
+
+    <wicket:link>
+	<link rel="stylesheet" type="text/css" href="ArbilWicketTablePanel.css"/>
+    </wicket:link>
+
+    <table class="arbilTable" wicket:id="datatable">
     </table>
 
     <wicket:fragment wicket:id="iconFragment">
