Markup and style of Arbil tables

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
@@ -1,3 +1,9 @@
+#arbilTableContainer{
+    overflow: auto;
+    max-height: 450px;
+    padding-left: 5px;
+}
+
 .arbilTable{
     border-collapse: collapse;
 }
@@ -10,4 +16,11 @@
     border: 1px solid #ccc;
     text-align: left;
     padding: 2px;
+    overflow: hidden;
+}
+
+.arbilTable td span{
+    display: block;
+    max-height: 5em;
+    overflow: hidden;
 }
