--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.html
@@ -4,8 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="ArbilWicketTablePanel.css"/>
     </wicket:link>
 
-    <table class="arbilTable" wicket:id="datatable">
-    </table>
+    <div id="arbilTableContainer">
+	<table class="arbilTable" wicket:id="datatable">
+	</table>
+    </div>
 
     <wicket:fragment wicket:id="iconFragment">
 	<img wicket:id="nodeIcon"/>
