DataTable: add css class to table markup that tells whether table is horizontal. Style specified for the non-horizontal class that makes table full width, column widths 50%

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
@@ -24,3 +24,11 @@
     max-height: 5em;
     overflow: hidden;
 }
+
+.arbilTable.non-horizontal{
+    width: 100%;
+}
+
+.arbilTable.non-horizontal td{
+    width: 50%;
+}
