Made ArbilWicketDataTable cell components AjaxEditableLabels, so that they can (in principle) be edited. No logic for actual editing.
The cell component gets a CellValueStyleAppender, which is a behavior that assigns a CSS class depending on the nature and/or state of the cell object

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/components/ArbilWicketTablePanel.css
@@ -32,3 +32,19 @@
 .arbilTable.non-horizontal td{
     width: 50%;
 }
+
+.arbilTable .editable{
+/*    border: 1px dashed #eee;*/
+}
+
+.arbilTable .required, .invalid{
+    color: red;
+}
+
+.arbilTable .needssave{
+    color: blue;
+}
+
+.arbilTable .nosuchfield{
+    background: #ccc;
+}
