Added field trigger for genre/subgenre and fixed handling of this (i.e. reload vocabulary for target field (=subgenre)). This fixes #6

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/templates/template.xml
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/templates/template.xml
@@ -87,6 +87,7 @@
         <FieldTrigger SourceFieldPath=".METATRANSCRIPT.Session.MDGroup.Actors.Actor(x).Language.Name" TargetFieldPath=".METATRANSCRIPT.Session.MDGroup.Actors.Actor(x).Language.Id" SourceFieldValue = "Content" />
         <FieldTrigger SourceFieldPath=".METATRANSCRIPT.Catalogue.SubjectLanguages.Language(x).Name" TargetFieldPath=".METATRANSCRIPT.Catalogue.SubjectLanguages.Language(x).Id" SourceFieldValue = "Content" />
         <FieldTrigger SourceFieldPath=".METATRANSCRIPT.Catalogue.DocumentLanguages.Language(x).Name" TargetFieldPath=".METATRANSCRIPT.Catalogue.DocumentLanguages.Language(x).Id" SourceFieldValue = "Content" />
+        <FieldTrigger SourceFieldPath=".METATRANSCRIPT.Session.MDGroup.Content(x).Genre" TargetFieldPath=".METATRANSCRIPT.Session.MDGroup.Content(x).SubGenre" SourceFieldValue = "FollowUp" />
         <comment>The LexiconResource field has no related id field and so is excluded from this list ".METATRANSCRIPT.Session.Resources.LexiconResource(x).MetaLanguages.Language"</comment>
     </FieldTriggers>
     <ChildNodePaths>
