Added METADATATRANSCRIPT element to default.xml that is used as placeholder with new templates. This way it does not give errors when it is instantiated in Arbil without any adjustments (which makes no sense but people will do this)

--- a/src/main/resources/nl/mpi/arbil/resources/templates/default.xml
+++ b/src/main/resources/nl/mpi/arbil/resources/templates/default.xml
@@ -7,7 +7,9 @@
     Description:
         Purpose of the document is only a place holder and should be replaced by the user after creating a new template.
 -->
-<demonstration>
-  <name>demonstration template</name>
-  <description>this must be replaced with valid metadata xml</description>
-</demonstration>
+<METATRANSCRIPT>
+    <demonstration>
+      <name>demonstration template</name>
+      <description>this must be replaced with valid metadata xml</description>
+    </demonstration>
+</METATRANSCRIPT>
