Updated the sign language template to be inline with the current standard templates.

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.SpeakerSigner.xml
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.SpeakerSigner.xml
@@ -1,7 +1,7 @@
 
 <InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" >
     <Actor>
-        <Role Link="http://www.mpi.nl/IMDI/Schema/Actor-Role.xml" Type="ClosedVocabularyList">Speaker/Signer</Role>
+        <Role Link="http://www.mpi.nl/IMDI/Schema/Actor-Role.xml" Type="OpenVocabularyList">Speaker/Signer</Role>
         <Name>Speaker/Signer Actor</Name>
         <FullName/>
         <Code/>
